# MyGeneticsApp

./: .replit  admin.py  app.py  database.py  find_body_comp_chart.py  fixed_analyze_route.py  google_auth.py  main.py  main_simple.py  models.py  pyproject.toml  replit.nix  simple_analyze.py  simple_auth_example.py  test_body_composition.py  updated_workout_route.py  workout_route.txt
.workflow/: Start application.workflow.yaml
attached_assets/: Pasted--Below-is-an-overview-of-how-you-can-integrate-3D-body-scanning-into-your-fitness-app-on-Replit-inc-1742838569468.txt  Pasted--Body-Analysis-System-Implementation-Guide-Here-s-a-comprehensive-guide-to-implementing-accurate-1743481637485.txt  Pasted--FINAL-FIX-PROMPT-FOR-REPLIT-AI-Title-Restore-Original-MyGenetics-Homepage-Design-Spacing-Col-1744606291610.txt  Pasted--Final-Prompt-Fully-Restore-MyGenetics-UI-Based-on-Screenshots-ChatGPT-Archive-Hi-Replit-I--1744605335613.txt  Pasted--Fix-the-Body-Composition-Estimation-Chart-Dynamic-User-Specific-Calculations-Required-The-curre-1744440171242.txt  Pasted--For-Replit-s-AI-Hi-Replit-I-need-you-to-implement-and-fix-a-key-feature-in-my-fitness--1744349174424.txt  Pasted--I-want-the-app-to-be-able-to-obtain-these-measures-of-a-person-Here-are-20-of-the-most-important--1744089942598.txt  Pasted--I-want-the-app-to-be-able-to-obtain-these-measures-of-a-person-Here-are-20-of-the-most-important--1744090021923.txt  Pasted--Instructions-for-Replit-Restructuring-Body-Analysis-Workflow-Overview-of-Changes-1-Move-all-1743483060114.txt  (+85 more)
templates/: account_settings.html  analysis.html  (+51 more)
(+27 files in other folders)
