[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask-login>=0.6.3",
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "keras>=3.9.0",
    "mediapipe>=0.10.21",
    "numpy>=1.26.4",
    "opencv-python>=4.11.0.86",
    "psycopg2-binary>=2.9.10",
    "tensorflow>=2.18.1",
    "trafilatura>=2.0.0",
    "werkzeug>=3.1.3",
    "oauthlib>=3.2.2",
]
